Fix release links menu not to overlap with text
Also made a navigation menu to previous versions in a narrow screen to
look a bit better.

GitHub closes #104

--- a/risteys_elixir/assets/css/tailwind.css
+++ b/risteys_elixir/assets/css/tailwind.css
@@ -651,8 +651,8 @@ nav.wide {
    position:absolute; /* together with .details-R-nav position makes submenu not to change alingment of elements in the heading */
    @apply bg-blue-darker;
    z-index: 30;  /* appear on top of the search field in narrow view */
-   @apply pl-0; /* remove left-pagging */
-   padding-right: 30px; /* right-padding to make menu box as wide as "R-▸" */
+   @apply p-2;
+   @apply rounded;
 }
 
 .R-subnav li a {
